# DenhamCurveWorm

./: CMakeLists.txt  README.md  bitbucket-pipelines.yml  worm-model.cc
data/: model-parameters
lib/: modelThreshold.hh
tests-data/: Beta.txt  Kappa.txt  energy.txt  feedback.txt  pointx  pointy
